clang-tidy: Fix unnecessary copy of objects for operator==() methods <https://webkit.org/b/192712> <rdar://problem/46739332>

Reviewed by Andy Estes.

Source/JavaScriptCore:

* b3/air/AirAllocateRegistersByGraphColoring.cpp:
(JSC::B3::Air::(anonymous namespace)::AbstractColoringAllocator::InterferenceEdge::operator==):
- Change argument from const to const reference to avoid a copy.

Source/WebCore:

* contentextensions/HashableActionList.h:
(WebCore::ContentExtensions::HashableActionList::operator== const):
(WebCore::ContentExtensions::HashableActionList::operator!= const):
* platform/network/FormData.h:
(WebCore::FormDataElement::EncodedFileData::operator== const):
(WebCore::FormDataElement::EncodedBlobData::operator== const):
- Change arguments from const to const reference to avoid
  copies.


Canonical link: https://commits.webkit.org/207301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239237 268f45cc-cd09-0410-ab3c-d52691b4dbfc